add horizontal divider to index, complete heading and services

--- a/website/index.html
+++ b/website/index.html
@@ -25,9 +25,13 @@
     <!-- Page Content -->
     <div class="container-fluid">
         <!-- First Featurette -->
+        <hr class="mx-auto"/>
         <span require-file="./templates/first_heading.html"></span>
+        <hr class="mx-auto"/>
         <span require-file="./templates/services.html"></span>
+        <hr class="mx-auto"/>
         <span require-file="./templates/portfolio.html"></span>
+        <hr class="mx-auto"/>
         <span require-file="./templates/contact.html"></span>
         <span require-file="./templates/footer.html"></span>
     </div>
